--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
     scroll-behavior: smooth;
 }
 body{
-    background: linear-gradient(180deg, rgba(20,20,20,1) 0%, rgba(41,41,41,1) 60%, rgba(41,41,41,1) 100%);
+    background: linear-gradient(180deg, rgba(20,20,20,1) 0%,
+     rgba(41,41,41,1) 60%, rgba(41,41,41,1) 100%);
     overflow-x: hidden;
 }
 
@@ -99,8 +100,8 @@ header ul li a:visited{
 .hero h1{
     color: white;
     font-size: 6rem;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: 400;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 700;
 }    
 .hero h2{
     color: rgb(0, 255, 255);
@@ -318,6 +319,10 @@ header ul li a:visited{
 } 
 .img-work p i{
     cursor: pointer;
+    transition: .25s ease-in-out;
+}
+.img-work p i:hover{
+    font-size: 24px;
 }
 
 #mbr,#mara,#cemj,#cep{
@@ -330,6 +335,7 @@ header ul li a:visited{
     width: 100%;
     border:2px solid rgb(0, 255, 255);
     border-radius: 5px;
+    transition: .5s ease-in-out;
 }
 .img-work .mob{
     height: 350px;
@@ -339,6 +345,7 @@ header ul li a:visited{
     right: 150px;
     border:2px solid rgb(0, 255, 255);
     border-radius: 5px;
+    transition: .5s ease-in-out;
 }
 .img-work .mob2{
     height: 350px;
@@ -348,6 +355,11 @@ header ul li a:visited{
     left: 150px;
     border:2px solid rgb(0, 255, 255);
     border-radius: 5px;
+    transition: .5s ease-in-out;
+}
+.img-work .mob:hover,.img-work .mob2:hover,.img-work .pc:hover{
+    box-shadow:  0 0 15px rgb(7, 7, 7);
+    transform: scale(1.02);
 }
 .morework{
     margin-top: 80px;
@@ -376,7 +388,7 @@ header ul li a:visited{
     color: white;
     transition: 0.8s ease-in-out;
     border-radius: 5px;
-    
+    transition: 0.2s ease-in-out;
 }
 .cards h4{
     color:  rgb(0, 255, 255); 
@@ -384,6 +396,13 @@ header ul li a:visited{
 .cards i{
     color:  rgb(255, 0, 255);
     cursor: pointer;
+}
+.cards a i{
+    font-size: 22px;
+    transition: 0.25s ease-in-out;
+}
+.cards a i:hover{
+    font-size: 26px;
 }
 .cards:hover{
     border: 0.5px solid  rgb(0, 255, 255);
@@ -399,10 +418,15 @@ header ul li a:visited{
 }
 .formulario{
     margin: 0 auto;
+    text-align: center;
+}
+.formulario h3{
+    padding-top: 150px;
+    color: rgb(0, 255, 255) ;
 }
 form{
     margin: 0 auto;
-    padding-top: 150px;
+    padding-top: 50px;
     width: 600px;
     height: 650px;
 }
@@ -425,7 +449,7 @@ input:hover,textarea:hover{
     height: 150px;
 }
 button{
-    width: 200px;
+    width: 300px;
     height: 60px;
     background-color: rgba(20,20,20,1);
     border: none;
@@ -439,7 +463,7 @@ button{
     letter-spacing: 2px;
     text-align: center;
     position: relative;
-    transition: all .5s;
+    transition: all .4s;
     border-radius: 5px;
 }
 button span{
@@ -454,7 +478,7 @@ button::after{
     width: 0;
     height: 100%;
     background: rgb(0, 255, 255);
-    transition: all .35s;
+    transition: all .5s;
     
 }
 button:hover{
@@ -579,5 +603,6 @@ footer h4:hover{
 [data-anime].animated{
    opacity: 1;
    transform: translatey(0);
+   
 }
   
