--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@ header .contas {
   list-style: none;
   position: absolute;
   top: 55px;
-  left: 250px;
+  left: 120px;
 }
 
 .contas li {
@@ -67,6 +67,20 @@ header ul li a:visited {
   color: rgb(197, 197, 197);
 }
 
+#cur {
+  display: block;
+  text-align: right;
+}
+
+#cur #textcur {
+  font-size: 15px;
+  width: 100px;
+  color: rgb(0, 255, 255);
+  transition: 0.2s ease-in-out;
+  display: block;
+  opacity: 0;
+}
+
 @media (max-width: 810px) {
   header img {
     top: 20px;
@@ -86,7 +100,7 @@ header ul li a:visited {
     top: 101px;
   }
   header .contas {
-    left: 240px;
+    left: 70px;
   }
   header ul li {
     padding: 5px;
@@ -100,6 +114,7 @@ header ul li a:visited {
   height: auto;
   align-items: center;
   text-align: center;
+  margin-top: 50px;
   margin-bottom: 150px;
 }
 
@@ -219,7 +234,7 @@ header ul li a:visited {
   }
   header .contas {
     top: 55px;
-    left: 150px;
+    left: 20px;
   }
   .hero h1 {
     font-size: 5rem;
